syntax = "proto3";

option go_package = "D:/projects/golang/tg-program/database-adress-contact/proto/adress-contact";

package address_service;

// Сообщение для представления точки (широта и долгота)
message Point {
    double latitude = 1;   // Широта
    double longitude = 2;  // Долгота
}

// Сообщение для запроса информации об адресе
message AddressRequest {
    string place_name = 1; // Название места (например, "Административный корпус")
}

// Сообщение для представления информации об адресе
message Place {
    string place_name = 1;          // Название места
    string place_time_start = 2;    // Время начала (в формате строки, например, "08:00:00")
    string place_time_end = 3;      // Время окончания (в формате строки, например, "22:00:00")
    string place_phone = 4;         // Телефон (строка)
    string place_email = 5;         // Email (строка)
    string place_adress = 6;        // Адрес (строка)
    Point place_adress_point = 7;   // Использование типа Point для широты и долготы
}

// Сообщение для ответа с информацией об адресах
message AddressResponse {
    repeated Place places = 1; // Список мест
}

// Определение сервиса
service AddressService {
    rpc GetAddressInfo(AddressRequest) returns (AddressResponse);
}
