package handlecommand

import (
	"context"
	"fmt"
	"log"
	"sort"
	"time"

	"tgclient/internal/clients"
	"tgclient/internal/fileutils"
	"tgclient/internal/messages"
	"tgclient/internal/messagetext"
	"tgclient/internal/models"
	"tgclient/internal/utils"
	pbac "tgclient/proto/adress-contact"
	pbs "tgclient/proto/schedule"

	"github.com/mymmrac/telego"
	th "github.com/mymmrac/telego/telegohandler"
)

// –ú–∞–ø–ø–∏–Ω–≥ –¥–ª—è –¥–Ω–µ–π –Ω–µ–¥–µ–ª–∏
var daysOfWeek = map[time.Weekday]string{
	time.Sunday:    "–í–æ—Å–∫—Ä–µ—Å–µ–Ω—å–µ",
	time.Monday:    "–ü–æ–Ω–µ–¥–µ–ª—å–Ω–∏–∫",
	time.Tuesday:   "–í—Ç–æ—Ä–Ω–∏–∫",
	time.Wednesday: "–°—Ä–µ–¥–∞",
	time.Thursday:  "–ß–µ—Ç–≤–µ—Ä–≥",
	time.Friday:    "–ü—è—Ç–Ω–∏—Ü–∞",
	time.Saturday:  "–°—É–±–±–æ—Ç–∞",
}

func New(bot *telego.Bot, updates <-chan telego.Update, options ...th.BotHandlerOption) {
	bh, err := th.NewBotHandler(bot, updates)
	if err != nil {
		log.Fatalf("–û—à–∏–±–∫–∞ –ø—Ä–∏ —Å–æ–∑–¥–∞–Ω–∏–∏ –æ–±—Ä–∞–±–æ—Ç—á–∏–∫–∞ –±–æ—Ç–∞: %v", err)
	}
	defer bh.Stop()

	authContext := &models.AuthContext{State: models.StateStart}

	//start
	bh.Handle(func(b *telego.Bot, update telego.Update) {
		authContext.UserID = update.Message.Chat.ID
		ctx, cancel := context.WithTimeout(context.Background(), time.Second)
		defer cancel()

		// –ü—Ä–æ–≤–µ—Ä—è–µ–º, –∑–∞—Ä–µ–≥–∏—Å—Ç—Ä–∏—Ä–æ–≤–∞–Ω –ª–∏ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å
		resp, err := clients.CheckUser(ctx, authContext.UserID)
		if err != nil {
			messages.SendMessage(b, update.Message.Chat.ID, "–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø—Ä–æ–≤–µ—Ä–∫–µ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è. –ü–æ–∂–∞–ª—É–π—Å—Ç–∞, –ø–æ–ø—Ä–æ–±—É–π—Ç–µ —Å–Ω–æ–≤–∞.", authContext)
			return
		}

		if resp.Exists {
			authContext.ProfileName = resp.ProfileName
			authContext.State = models.StateAuthorized
			messages.SendMainMenu(b, update.Message.Chat.ID, authContext)
		} else {
			authContext.State = models.StateAwaitingName
			messages.SendMessageWithoutDelete(b, update.Message.Chat.ID, "–î–æ–±—Ä–æ –ø–æ–∂–∞–ª–æ–≤–∞—Ç—å!\n–ü–æ–∂–∞–ª—É–π—Å—Ç–∞, –≤–≤–µ–¥–∏—Ç–µ –≤–∞—à–µ –§–ò–û:", authContext)
		}
	}, th.CommandEqual("start"))

	bh.Handle(func(b *telego.Bot, update telego.Update) {
		if update.Message != nil {
			ctx, cancel := context.WithTimeout(context.Background(), time.Second)
			defer cancel()

			switch authContext.State {
			case models.StateStart:
				authContext.UserID = update.Message.Chat.ID
				ctx, cancel := context.WithTimeout(context.Background(), time.Second)
				defer cancel()

				resp, err := clients.CheckUser(ctx, authContext.UserID)
				if err != nil {
					messages.SendMessage(b, update.Message.Chat.ID, "–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø—Ä–æ–≤–µ—Ä–∫–µ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è. –ü–æ–∂–∞–ª—É–π—Å—Ç–∞, –ø–æ–ø—Ä–æ–±—É–π—Ç–µ —Å–Ω–æ–≤–∞.", authContext)
					return
				}

				if resp.Exists {
					authContext.ProfileName = resp.ProfileName
					authContext.State = models.StateAuthorized
					messages.SendMessage(b, update.Message.Chat.ID, "–í—ã —É—Å–ø–µ—à–Ω–æ –∞–≤—Ç–æ—Ä–∏–∑–æ–≤–∞–Ω—ã!", authContext)

					messages.SendScheduleMenu(b, update.Message.Chat.ID, authContext)
				} else {
					messages.SendMessage(b, update.Message.Chat.ID, "–ü–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å –Ω–µ –Ω–∞–π–¥–µ–Ω. –ü–æ–∂–∞–ª—É–π—Å—Ç–∞, –≤–≤–µ–¥–∏—Ç–µ –≤–∞—à–µ –∏–º—è:", authContext)
					authContext.State = models.StateAwaitingName
				}
			case models.StateAwaitingName:
				authContext.ProfileName = update.Message.Text
				messages.SendGroupSelection(b, update.Message.Chat.ID, authContext)
				authContext.State = models.StateAwaitingGroup

			case models.StateFindTeacherAwaitingFIO:
				teachers, err := clients.FindTeachersByFIO(ctx, update.Message.Text)
				if err != nil {
					messages.SendMessage(b, update.Message.Chat.ID, fmt.Sprintf("–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–∏—Å–∫–µ –ø—Ä–µ–ø–æ–¥–∞–≤–∞—Ç–µ–ª–µ–π: %v", err), authContext)
					return
				}
				message, imgs := messagetext.TextForTeacherInfo(teachers)
				messages.SendTeachersInfo(b, update.Message.Chat.ID, authContext, update.Message.Chat.ID, teachers, message, imgs)
				authContext.State = models.StateToMainMenu // –í–µ—Ä–Ω—É—Ç—å—Å—è

			case models.StateFindTeacherAwaitingDepartment:
				teachers, err := clients.FindTeachersByDepartment(ctx, update.Message.Text)
				if err != nil {
					messages.SendMessage(b, update.Message.Chat.ID, fmt.Sprintf("–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–∏—Å–∫–µ –ø—Ä–µ–ø–æ–¥–∞–≤–∞—Ç–µ–ª–µ–π: %v", err), authContext)
					return
				}
				message, imgs := messagetext.TextForTeacherInfo(teachers)
				messages.SendTeachersInfo(b, update.Message.Chat.ID, authContext, update.Message.Chat.ID, teachers, message, imgs)
				authContext.State = models.StateToMainMenu // –í–µ—Ä–Ω—É—Ç—å—Å—è –∫ –∞–≤—Ç–æ—Ä–∏–∑–æ–≤–∞–Ω–Ω–æ–º—É —Å–æ—Å—Ç–æ—è–Ω–∏—é

			case models.StateFindTeacherAwaitingSubject:
				teachers, err := clients.FindTeachersBySubject(ctx, update.Message.Text)
				if err != nil {
					messages.SendMessage(b, update.Message.Chat.ID, fmt.Sprintf("–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–∏—Å–∫–µ –ø—Ä–µ–ø–æ–¥–∞–≤–∞—Ç–µ–ª–µ–π: %v", err), authContext)
					return
				}
				message, imgs := messagetext.TextForTeacherInfo(teachers)
				messages.SendTeachersInfo(b, update.Message.Chat.ID, authContext, update.Message.Chat.ID, teachers, message, imgs)
				authContext.State = models.StateToMainMenu // –í–µ—Ä–Ω—É—Ç—å—Å—è –∫ –∞–≤—Ç–æ—Ä–∏–∑–æ–≤–∞–Ω–Ω–æ–º—É —Å–æ—Å—Ç–æ—è–Ω–∏—é

			}

		} else if update.CallbackQuery != nil {
			if authContext.State == models.StateAwaitingGroup {
				group := update.CallbackQuery.Data

				messages.SendMessage(b, update.CallbackQuery.From.ID, fmt.Sprintf("–í—ã –≤—ã–±—Ä–∞–ª–∏ –≥—Ä—É–ø–ø—É: %s", group), authContext)

				// –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
				ctx, cancel := context.WithTimeout(context.Background(), time.Second)
				defer cancel()

				_, err := clients.RegisterUser(ctx, authContext.UserID, authContext.ProfileName, group) // –ü–µ—Ä–µ–¥–∞–µ–º –≥—Ä—É–ø–ø—É
				if err != nil {
					messages.SendMessage(b, update.CallbackQuery.From.ID, "–û—à–∏–±–∫–∞ –ø—Ä–∏ —Ä–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏–∏. –ü–æ–∂–∞–ª—É–π—Å—Ç–∞, –ø–æ–ø—Ä–æ–±—É–π—Ç–µ —Å–Ω–æ–≤–∞.", authContext)
					return
				}
				authContext.State = models.StateAuthorized

				messages.SendMessageWithoutDelete(b, update.CallbackQuery.From.ID, "–í—ã —É—Å–ø–µ—à–Ω–æ –∑–∞—Ä–µ–≥–∏—Å—Ç—Ä–∏—Ä–æ–≤–∞–Ω—ã!", authContext)
				messages.SendMainMenu(b, update.Message.Chat.ID, authContext)
			} else if authContext.State == models.StateAuthorized {
				// –û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞–∂–∞—Ç–∏–π –Ω–∞ –∫–Ω–æ–ø–∫–∏ —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—è

				if update.CallbackQuery.Data == "schedule_today" {
					sendSchedule(b, update.CallbackQuery.From.ID, "today", authContext.ProfileName, authContext)

				} else if update.CallbackQuery.Data == "schedule_week" {
					sendSchedule(b, update.CallbackQuery.From.ID, "week", authContext.ProfileName, authContext)

				}
			} else if authContext.State == models.StateToMainMenu {
				// –û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞–∂–∞—Ç–∏–π –Ω–∞ –∫–Ω–æ–ø–∫–∏ —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—è

				if update.CallbackQuery.Data == "main_menu" {
					messages.SendMainMenu(b, update.Message.Chat.ID, authContext)
				}
			}
		}
	}, th.AnyMessage())

	bh.Handle(func(b *telego.Bot, update telego.Update) {
		if update.CallbackQuery != nil {

			if authContext.State == models.StateAwaitingGroup {
				group := update.CallbackQuery.Data
				messages.SendMessageWithoutDelete(b, update.CallbackQuery.From.ID, fmt.Sprintf("–í—ã –≤—ã–±—Ä–∞–ª–∏ –≥—Ä—É–ø–ø—É: %s", group), authContext)

				ctx, cancel := context.WithTimeout(context.Background(), time.Second)
				defer cancel()

				_, err := clients.RegisterUser(ctx, authContext.UserID, authContext.ProfileName, group) // –ü–µ—Ä–µ–¥–∞–µ–º –≥—Ä—É–ø–ø—É
				if err != nil {
					messages.SendMessageWithoutDelete(b, update.CallbackQuery.From.ID, "–û—à–∏–±–∫–∞ –ø—Ä–∏ —Ä–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏–∏. –ü–æ–∂–∞–ª—É–π—Å—Ç–∞, –ø–æ–ø—Ä–æ–±—É–π—Ç–µ —Å–Ω–æ–≤–∞.", authContext)
					return
				}

				authContext.State = models.StateAuthorized
				messages.SendMessageWithoutDelete(b, update.CallbackQuery.From.ID, "–í—ã —É—Å–ø–µ—à–Ω–æ –∑–∞—Ä–µ–≥–∏—Å—Ç—Ä–∏—Ä–æ–≤–∞–Ω—ã –∏ –∞–≤—Ç–æ—Ä–∏–∑–æ–≤–∞–Ω—ã!", authContext)
				message := fmt.Sprintf(`–ß—Ç–æ–±—ã –±—ã—Ç—å –≤ –∫—É—Ä—Å–µ –ø–æ—Å–ª–µ–¥–Ω–∏—Ö –Ω–æ–≤–æ—Å—Ç–µ–π, —Å–∫–æ—Ä–µ–µ –ø–µ—Ä–µ–π–¥–∏—Ç–µ –ø–æ —Å—Å—ã–ª–∫–µ, –µ—Å–ª–∏ –µ—â—ë –Ω–µ –ø–æ–¥–ø–∏—Å–∞–Ω—ã: https://t.me/pmishSamSMU 
	–ë—É–¥—É —Ä–∞–¥ –æ—Ç–≤–µ—Ç–∏—Ç—å –Ω–∞ –ª—é–±—ã–µ –≤–∞—à–∏ –≤–æ–ø—Ä–æ—Å—ã, %s!`, authContext.ProfileName)

				messages.SendMessageWithoutDelete(b, update.CallbackQuery.From.ID, message, authContext)
				messages.SendMainMenuWithoutDelete(b, update.CallbackQuery.From.ID, authContext)

			}

			if authContext.State == models.StateAuthorized {

				switch update.CallbackQuery.Data {
				case "schedule":

					authContext.State = models.StateScheduleMenu
					messages.SendScheduleMenu(b, update.CallbackQuery.From.ID, authContext)
				case "teachers":
					authContext.State = models.StateFindTeacherMenu
					messages.SendTeachersInfoMenu(b, update.CallbackQuery.From.ID, authContext)
				case "contacts":
					authContext.State = models.StateAdressContactMenu
					messages.SendAdressContactMenu(bot, update.CallbackQuery.From.ID, authContext)
				case "documents":
					authContext.State = models.StateDocumentMenu
					messages.SendDocumentsMenu(bot, update.CallbackQuery.From.ID, authContext)
					// case "extracurricular":
					// 	// –û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞–∂–∞—Ç–∏—è –Ω–∞ "–í–Ω–µ—É—Ä–æ—á–Ω–∞—è –∞–∫—Ç–∏–≤–Ω–∞—è –¥–µ—è—Ç–µ–ª—å–Ω–æ—Å—Ç—å"
					// 	sendExtracurricularInfo(b, update.CallbackQuery.From.ID, authContext)
					// case "ask_question":
					// 	// –û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞–∂–∞—Ç–∏—è –Ω–∞ "–ó–∞–¥–∞—Ç—å –≤–æ–ø—Ä–æ—Å"
					// 	sendQuestionForm(b, update.CallbackQuery.From.ID, authContext)
					// case "change_user":
					// 	// –û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞–∂–∞—Ç–∏—è –Ω–∞ "–°–º–µ–Ω–∏—Ç—å –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è"
					// 	authContext.State = models.StateStart
					// 	messages.SendMessage(b, update.CallbackQuery.From.ID, "–í—ã –≤—ã—à–ª–∏ –∏–∑ –∞–∫–∫–∞—É–Ω—Ç–∞. –ü–æ–∂–∞–ª—É–π—Å—Ç–∞, –≤–≤–µ–¥–∏—Ç–µ –≤–∞—à–µ –∏–º—è:", authContext)
				}
			}

			if authContext.State == models.StateScheduleMenu {
				// –û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞–∂–∞—Ç–∏–π –Ω–∞ –∫–Ω–æ–ø–∫–∏ —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—è
				if update.CallbackQuery.Data == "schedule_today" {
					authContext.State = models.StateToMainMenu
					getGroupAndSendSchedule(b, update.CallbackQuery.From.ID, "today", authContext.UserID, authContext)

				} else if update.CallbackQuery.Data == "schedule_week" {
					authContext.State = models.StateToMainMenu
					getGroupAndSendSchedule(b, update.CallbackQuery.From.ID, "week", authContext.UserID, authContext)

				} else if update.CallbackQuery.Data == "schedule_back" { //–∫–Ω–æ–ø–∫–∞ –Ω–∞–∑–∞–¥ (–∫ –≥–ª–∞–≤–Ω–æ–º—É –º–µ–Ω—é) –∏–∑ –≤—ã–±–æ—Ä–∞ —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—è —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—è
					messages.SendMainMenu(b, update.CallbackQuery.From.ID, authContext)
					authContext.State = models.StateAuthorized
				}
			}

			if authContext.State == models.StateToMainMenu {
				if update.CallbackQuery.Data == "main_menu" {
					messages.SendMainMenu(b, update.CallbackQuery.From.ID, authContext)
					authContext.State = models.StateAuthorized
				}
			}

			if authContext.State == models.StateFindTeacherMenu {
				// –û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞–∂–∞—Ç–∏–π –Ω–∞ –º–∞–Ω—é –ø–æ—Å–∏–∫–∞ –ø—Ä–µ–ø–æ–¥–∞
				if update.CallbackQuery.Data == "teacher_find_back" {
					messages.SendMainMenu(b, update.CallbackQuery.From.ID, authContext)
					authContext.State = models.StateAuthorized
				} else if update.CallbackQuery.Data == "teacher_find_fio" {
					messages.SendMessage(b, update.CallbackQuery.From.ID, "–í–≤–µ–¥–∏—Ç–µ —Ñ–∏–æ –ø—Ä–µ–ø–æ–¥–∞–≤–∞—Ç–µ–ª—è:", authContext)
					authContext.State = models.StateFindTeacherAwaitingFIO
				} else if update.CallbackQuery.Data == "teacher_find_department" {
					messages.SendMessage(b, update.CallbackQuery.From.ID, "–í–≤–µ–¥–∏—Ç–µ –∫–∞—Ñ–µ–¥—Ä—É –ø—Ä–µ–ø–æ–¥–∞–≤–∞—Ç–µ–ª—è:", authContext)
					authContext.State = models.StateFindTeacherAwaitingDepartment
				} else if update.CallbackQuery.Data == "teacher_find_subject" {
					messages.SendMessage(b, update.CallbackQuery.From.ID, "–í–≤–µ–¥–∏—Ç–µ –ø—Ä–µ–¥–º–µ—Ç:", authContext)
					authContext.State = models.StateFindTeacherAwaitingSubject
				}

			}

			if authContext.State == models.StateAdressContactMenu {
				if update.CallbackQuery.Data == "adress_contact_back" {
					messages.SendMainMenu(b, update.CallbackQuery.From.ID, authContext)
					authContext.State = models.StateAuthorized

				} else if update.CallbackQuery.Data == "adress_contact_administrative" {
					place := "–ê–¥–º–∏–Ω–∏—Å—Ç—Ä–∞—Ç–∏–≤–Ω—ã–π –∫–æ—Ä–ø—É—Å"
					handleAddressButtonPress(b, update.CallbackQuery.From.ID, place, authContext)
					authContext.SelectedPlace = &pbac.Place{PlaceName: place} // –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤—ã–±—Ä–∞–Ω–Ω–æ–µ –º–µ—Å—Ç–æ
					authContext.State = models.StateToMainMenu

				} else if update.CallbackQuery.Data == "adress_contact_study" {
					place := "–£—á–µ–±–Ω—ã–π –∫–æ—Ä–ø—É—Å"
					handleAddressButtonPress(b, update.CallbackQuery.From.ID, place, authContext)
					authContext.SelectedPlace = &pbac.Place{PlaceName: place} // –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤—ã–±—Ä–∞–Ω–Ω–æ–µ –º–µ—Å—Ç–æ
					authContext.State = models.StateToMainMenu

				} else if update.CallbackQuery.Data == "adress_contact_living" {
					place := "–û–±—â–µ–∂–∏—Ç–∏–µ"
					handleAddressButtonPress(b, update.CallbackQuery.From.ID, place, authContext)
					authContext.SelectedPlace = &pbac.Place{PlaceName: place} // –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤—ã–±—Ä–∞–Ω–Ω–æ–µ –º–µ—Å—Ç–æ
					authContext.State = models.StateToMainMenu

				} else if update.CallbackQuery.Data == "adress_contact_departments" {
					place := "–ö–∞—Ñ–µ–¥—Ä—ã"
					handleAddressButtonPress(b, update.CallbackQuery.From.ID, place, authContext)
					authContext.SelectedPlace = &pbac.Place{PlaceName: place} // –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤—ã–±—Ä–∞–Ω–Ω–æ–µ –º–µ—Å—Ç–æ
					authContext.State = models.StateToMainMenu

				}
			}

			if authContext.State == models.StateToMainMenu {
				if update.CallbackQuery.Data == "send_location" {

					ctx, cancel := context.WithTimeout(context.Background(), time.Second)
					defer cancel()

					if authContext.SelectedPlace != nil {
						// –ü–æ–ª—É—á–∞–µ–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –º–µ—Å—Ç–µ
						places, err := clients.FindAddressByPlaceName(ctx, authContext.SelectedPlace.PlaceName) // –ò—Å–ø–æ–ª—å–∑—É–µ–º —Å–æ—Ö—Ä–∞–Ω–µ–Ω–Ω–æ–µ –º–µ—Å—Ç–æ
						if err != nil {
							log.Printf("–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ –∞–¥—Ä–µ—Å–∞: %v", err)
							return
						}

						// –ü—Ä–µ–¥–ø–æ–ª–∞–≥–∞–µ–º, —á—Ç–æ –≤—ã —Ö–æ—Ç–∏—Ç–µ –æ—Ç–ø—Ä–∞–≤–∏—Ç—å –ª–æ–∫–∞—Ü–∏—é –ø–µ—Ä–≤–æ–≥–æ –º–µ—Å—Ç–∞
						if len(places) > 0 {
							latitude := places[0].PlaceAdressPoint.Latitude
							longitude := places[0].PlaceAdressPoint.Longitude
							messages.SendMessageAdressLocation(bot, update.CallbackQuery.From.ID, authContext, latitude, longitude)
						} else {
							log.Println("–ù–µ—Ç –¥–æ—Å—Ç—É–ø–Ω—ã—Ö –º–µ—Å—Ç –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –ª–æ–∫–∞—Ü–∏–∏.")
						}
					} else {
						log.Println("–ù–µ—Ç –≤—ã–±—Ä–∞–Ω–Ω–æ–≥–æ –º–µ—Å—Ç–∞.")
					}

				}
			}

			if authContext.State == models.StateDocumentMenu {
				if update.CallbackQuery.Data == "documents_back" {
					messages.SendMainMenu(b, update.CallbackQuery.From.ID, authContext)
					authContext.State = models.StateAuthorized
				} else if update.CallbackQuery.Data == "document_group_1" {
					messages.SendDocumentsGroup1Menu(b, update.CallbackQuery.From.ID, authContext, update.CallbackQuery.From.ID)
					authContext.State = models.StateDocumentGroup1Menu
				}
			}

			if authContext.State == models.StateDocumentGroup1Menu {
				if update.CallbackQuery.Data == "document_group_1_doc1" {
					message := fileutils.GetFileInfo("doc1")
					messages.SendFileInfoMessage(b, update.CallbackQuery.From.ID, message, authContext)
					authContext.State = models.StateReadyForDownloadDocument

				} else if update.CallbackQuery.Data == "document_group_1_doc2" {
					messages.SendMessage(b, update.CallbackQuery.From.ID, "doc2", authContext)
				} else if update.CallbackQuery.Data == "document_group_1_doc3" {
					messages.SendMessage(b, update.CallbackQuery.From.ID, "doc3", authContext)
				} else if update.CallbackQuery.Data == "main_menu" {
					messages.SendMainMenu(b, update.CallbackQuery.From.ID, authContext)
					authContext.State = models.StateAuthorized
				}
			}

			if authContext.State == models.StateReadyForDownloadDocument {
				if update.CallbackQuery.Data == "main_menu" {
					messages.SendMainMenu(b, update.CallbackQuery.From.ID, authContext)
					authContext.State = models.StateAuthorized
				} else if update.CallbackQuery.Data == "downloading_file" {
					messages.SendFileInfoDocument(b, update.CallbackQuery.From.ID, authContext)
				}
			}

		}
	}, th.AnyCallbackQuery())

	bh.Start()
}

func sendSchedule(bot *telego.Bot, userID int64, requestType, groupName string, authContext *models.AuthContext) {
	ctx, cancel := context.WithTimeout(context.Background(), time.Second)
	defer cancel()

	// –í—ã–ø–æ–ª–Ω—è–µ–º gRPC –≤—ã–∑–æ–≤ –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—è
	scheduleResp, err := clients.GetSchedule(ctx, groupName, requestType)
	if err != nil {
		messages.SendMessageInlineKeyboard(bot, userID, authContext, fmt.Sprintf("–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—è. –ü–æ–∂–∞–ª—É–π—Å—Ç–∞, –ø–æ–ø—Ä–æ–±—É–π—Ç–µ —Å–Ω–æ–≤–∞. %s", err), "–í –≥–ª–∞–≤–Ω–æ–µ –º–µ–Ω—é", "main_menu")
		return
	}

	// –§–æ—Ä–º–∏—Ä—É–µ–º —Å–æ–æ–±—â–µ–Ω–∏–µ —Å —Ä–∞—Å–ø–∏—Å–∞–Ω–∏–µ–º
	if len(scheduleResp.Lessons) == 0 {
		messages.SendMessageInlineKeyboard(bot, userID, authContext, "–†–∞—Å–ø–∏—Å–∞–Ω–∏–µ –ø—É—Å—Ç–æ.", "–í –≥–ª–∞–≤–Ω–æ–µ –º–µ–Ω—é", "main_menu")
		return
	}

	// –°–æ–∑–¥–∞–µ–º –º–∞–ø—É –¥–ª—è —Ö—Ä–∞–Ω–µ–Ω–∏—è —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—è –ø–æ –¥–Ω—è–º
	type DaySchedule struct {
		Date    string
		Weekday string
		Lessons []*pbs.Lesson
	}

	schedules := make(map[string]*DaySchedule)

	for _, lesson := range scheduleResp.Lessons {
		// –ü–∞—Ä—Å–∏–º –≤—Ä–µ–º—è –Ω–∞—á–∞–ª–∞
		startTime, err := time.Parse(time.RFC3339, lesson.StartTime)
		if err != nil {
			messages.SendMessageInlineKeyboard(bot, userID, authContext, "–û—à–∏–±–∫–∞ –ø—Ä–∏ –æ–±—Ä–∞–±–æ—Ç–∫–µ –¥–∞—Ç—ã.", "–í –≥–ª–∞–≤–Ω–æ–µ –º–µ–Ω—é", "main_menu")
			return
		}

		// –ü–æ–ª—É—á–∞–µ–º –¥–µ–Ω—å –Ω–µ–¥–µ–ª–∏ –∏ –¥–∞—Ç—É
		weekday := daysOfWeek[startTime.Weekday()]
		formattedDate := startTime.Format("02.01.2006") // –§–æ—Ä–º–∞—Ç–∏—Ä—É–µ–º –¥–∞—Ç—É

		// –ü—Ä–æ–≤–µ—Ä—è–µ–º, —Å—É—â–µ—Å—Ç–≤—É–µ—Ç –ª–∏ —É–∂–µ –∑–∞–ø–∏—Å—å –¥–ª—è —ç—Ç–æ–π –¥–∞—Ç—ã
		if daySchedule, exists := schedules[formattedDate]; exists {
			// –ï—Å–ª–∏ –∑–∞–ø–∏—Å—å —Å—É—â–µ—Å—Ç–≤—É–µ—Ç, –¥–æ–±–∞–≤–ª—è–µ–º —É—Ä–æ–∫
			daySchedule.Lessons = append(daySchedule.Lessons, lesson)
		} else {
			// –ï—Å–ª–∏ –∑–∞–ø–∏—Å–∏ –Ω–µ—Ç, —Å–æ–∑–¥–∞–µ–º –Ω–æ–≤—É—é
			schedules[formattedDate] = &DaySchedule{
				Date:    formattedDate,
				Weekday: weekday,
				Lessons: []*pbs.Lesson{lesson},
			}
		}
	}

	// –°–æ—Ä—Ç–∏—Ä—É–µ–º —Ä–∞—Å–ø–∏—Å–∞–Ω–∏–µ –ø–æ –¥–∞—Ç–µ
	var sortedSchedules []*DaySchedule
	for _, daySchedule := range schedules {
		sortedSchedules = append(sortedSchedules, daySchedule)
	}
	sort.Slice(sortedSchedules, func(i, j int) bool {
		return sortedSchedules[i].Date < sortedSchedules[j].Date
	})

	// –§–æ—Ä–º–∏—Ä—É–µ–º —Å–æ–æ–±—â–µ–Ω–∏–µ
	var message string
	for _, daySchedule := range sortedSchedules {
		message += fmt.Sprintf("üî¥ –†–∞—Å–ø–∏—Å–∞–Ω–∏–µ –Ω–∞ %s (%s):\n", daySchedule.Date, daySchedule.Weekday)
		for _, lesson := range daySchedule.Lessons {
			// –ü–∞—Ä—Å–∏–º –≤—Ä–µ–º—è –Ω–∞—á–∞–ª–∞ –∏ –∫–æ–Ω—Ü–∞
			startTime, _ := time.Parse(time.RFC3339, lesson.StartTime)
			endTime, _ := time.Parse(time.RFC3339, lesson.EndTime)

			// –§–æ—Ä–º–∞—Ç–∏—Ä—É–µ–º –≤—Ä–µ–º—è
			formattedTime := fmt.Sprintf("%s - %s", startTime.Format("15:04"), endTime.Format("15:04"))

			// –ü—Ä–æ–≤–µ—Ä—è–µ–º SubjectName –∏ –∑–∞–º–µ–Ω—è–µ–º –µ–≥–æ –ø—Ä–∏ –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ—Å—Ç–∏
			TypeEducation := lesson.TypeEducation
			if TypeEducation == "–ü—Ä–∞–∫—Ç–∏—á–µ—Å–∫–æ–µ –∑–∞–Ω—è—Ç–∏–µ" {
				TypeEducation = "–ü—Ä–∞–∫—Ç–∏–∫–∞"
			}
			if TypeEducation == "–õ–∞–±–æ—Ä–∞—Ç–æ—Ä–Ω–æ–µ –∑–∞–Ω—è—Ç–∏–µ" {
				TypeEducation = "–õ–∞–±–æ—Ä–∞—Ç–æ—Ä–Ω–∞—è"
			}

			message += fmt.Sprintf("| %s | %s | %s |\n",
				formattedTime,
				lesson.SubjectName,
				TypeEducation,
				// lesson.TeacherName,
			)
		}
		message += "\n" // –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Å—Ç—É—é —Å—Ç—Ä–æ–∫—É –º–µ–∂–¥—É –¥–Ω—è–º–∏
	}

	messages.SendMessage(bot, userID, message, authContext)

	//tofoo

}

func getScheduleMessage(requestType, groupName string) string {
	ctx, cancel := context.WithTimeout(context.Background(), time.Second)
	defer cancel()

	// –í—ã–ø–æ–ª–Ω—è–µ–º gRPC –≤—ã–∑–æ–≤ –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—è
	scheduleResp, err := clients.GetSchedule(ctx, groupName, requestType)
	if err != nil {
		return fmt.Sprintf("–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—è. –ü–æ–∂–∞–ª—É–π—Å—Ç–∞, –ø–æ–ø—Ä–æ–±—É–π—Ç–µ —Å–Ω–æ–≤–∞. %s", err)
	}

	// –§–æ—Ä–º–∏—Ä—É–µ–º —Å–æ–æ–±—â–µ–Ω–∏–µ —Å —Ä–∞—Å–ø–∏—Å–∞–Ω–∏–µ–º
	if len(scheduleResp.Lessons) == 0 {
		return "–†–∞—Å–ø–∏—Å–∞–Ω–∏–µ –ø—É—Å—Ç–æ."
	}

	// –°–æ–∑–¥–∞–µ–º –º–∞–ø—É –¥–ª—è —Ö—Ä–∞–Ω–µ–Ω–∏—è —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—è –ø–æ –¥–Ω—è–º
	type DaySchedule struct {
		Date    string
		Weekday string
		Lessons []*pbs.Lesson
	}

	schedules := make(map[string]*DaySchedule)

	for _, lesson := range scheduleResp.Lessons {
		// –ü–∞—Ä—Å–∏–º –≤—Ä–µ–º—è –Ω–∞—á–∞–ª–∞
		startTime, err := time.Parse(time.RFC3339, lesson.StartTime)
		if err != nil {
			return "–û—à–∏–±–∫–∞ –ø—Ä–∏ –æ–±—Ä–∞–±–æ—Ç–∫–µ –¥–∞—Ç—ã."
		}

		// –ü–æ–ª—É—á–∞–µ–º –¥–µ–Ω—å –Ω–µ–¥–µ–ª–∏ –∏ –¥–∞—Ç—É
		weekday := daysOfWeek[startTime.Weekday()]
		formattedDate := startTime.Format("02.01.2006") // –§–æ—Ä–º–∞—Ç–∏—Ä—É–µ–º –¥–∞—Ç—É

		// –ü—Ä–æ–≤–µ—Ä—è–µ–º, —Å—É—â–µ—Å—Ç–≤—É–µ—Ç –ª–∏ —É–∂–µ –∑–∞–ø–∏—Å—å –¥–ª—è —ç—Ç–æ–π –¥–∞—Ç—ã
		if daySchedule, exists := schedules[formattedDate]; exists {
			// –ï—Å–ª–∏ –∑–∞–ø–∏—Å—å —Å—É—â–µ—Å—Ç–≤—É–µ—Ç, –¥–æ–±–∞–≤–ª—è–µ–º —É—Ä–æ–∫
			daySchedule.Lessons = append(daySchedule.Lessons, lesson)
		} else {
			// –ï—Å–ª–∏ –∑–∞–ø–∏—Å–∏ –Ω–µ—Ç, —Å–æ–∑–¥–∞–µ–º –Ω–æ–≤—É—é
			schedules[formattedDate] = &DaySchedule{
				Date:    formattedDate,
				Weekday: weekday,
				Lessons: []*pbs.Lesson{lesson},
			}
		}
	}

	// –°–æ—Ä—Ç–∏—Ä—É–µ–º —Ä–∞—Å–ø–∏—Å–∞–Ω–∏–µ –ø–æ –¥–∞—Ç–µ
	var sortedSchedules []*DaySchedule
	for _, daySchedule := range schedules {
		sortedSchedules = append(sortedSchedules, daySchedule)
	}
	sort.Slice(sortedSchedules, func(i, j int) bool {
		return sortedSchedules[i].Date < sortedSchedules[j].Date
	})

	// –§–æ—Ä–º–∏—Ä—É–µ–º —Å–æ–æ–±—â–µ–Ω–∏–µ
	var message string
	for _, daySchedule := range sortedSchedules {
		message += fmt.Sprintf("üî¥ –†–∞—Å–ø–∏—Å–∞–Ω–∏–µ –Ω–∞ %s (%s):\n", daySchedule.Date, daySchedule.Weekday)
		for _, lesson := range daySchedule.Lessons {
			// –ü–∞—Ä—Å–∏–º –≤—Ä–µ–º—è –Ω–∞—á–∞–ª–∞ –∏ –∫–æ–Ω—Ü–∞
			startTime, _ := time.Parse(time.RFC3339, lesson.StartTime)
			endTime, _ := time.Parse(time.RFC3339, lesson.EndTime)

			// –§–æ—Ä–º–∞—Ç–∏—Ä—É–µ–º –≤—Ä–µ–º—è
			formattedTime := fmt.Sprintf("%s - %s", startTime.Format("15:04"), endTime.Format("15:04"))

			// –ü—Ä–æ–≤–µ—Ä—è–µ–º SubjectName –∏ –∑–∞–º–µ–Ω—è–µ–º –µ–≥–æ –ø—Ä–∏ –Ω–µ–æ–±—Ö–æ–¥–∏–º–æ—Å—Ç–∏
			TypeEducation := lesson.TypeEducation
			if TypeEducation == "–ü—Ä–∞–∫—Ç–∏—á–µ—Å–∫–æ–µ –∑–∞–Ω—è—Ç–∏–µ" {
				TypeEducation = "–ü—Ä–∞–∫—Ç–∏–∫–∞"
			}
			if TypeEducation == "–õ–∞–±–æ—Ä–∞—Ç–æ—Ä–Ω–æ–µ –∑–∞–Ω—è—Ç–∏–µ" {
				TypeEducation = "–õ–∞–±–æ—Ä–∞—Ç–æ—Ä–Ω–∞—è"
			}

			message += fmt.Sprintf("| %s | %s | %s |\n",
				formattedTime,
				lesson.SubjectName,
				TypeEducation,
				// lesson.TeacherName,
			)
		}
		message += "\n" // –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Å—Ç—É—é —Å—Ç—Ä–æ–∫—É –º–µ–∂–¥—É –¥–Ω—è–º–∏
	}

	return message

}

// func sendExtracurricularInfo(bot *telego.Bot, userID int64, authContext *AuthContext) {
// 	// –õ–æ–≥–∏–∫–∞ –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –≤–Ω–µ—É—Ä–æ—á–Ω–æ–π –∞–∫—Ç–∏–≤–Ω–æ–π –¥–µ—è—Ç–µ–ª—å–Ω–æ—Å—Ç–∏
// 	message := "–ó–¥–µ—Å—å –±—É–¥–µ—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—è –æ –≤–Ω–µ—É—Ä–æ—á–Ω–æ–π –∞–∫—Ç–∏–≤–Ω–æ–π –¥–µ—è—Ç–µ–ª—å–Ω–æ—Å—Ç–∏."
// 	sendMessage(bot, userID, message, authContext)
// }

// func sendQuestionForm(bot *telego.Bot, userID int64, authContext *AuthContext) {
// 	// –õ–æ–≥–∏–∫–∞ –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ —Ñ–æ—Ä–º—ã –¥–ª—è –∑–∞–¥–∞–Ω–∏—è –≤–æ–ø—Ä–æ—Å–∞
// 	message := "–ó–¥–µ—Å—å –±—É–¥–µ—Ç —Ñ–æ—Ä–º–∞ –¥–ª—è –∑–∞–¥–∞–Ω–∏—è –≤–æ–ø—Ä–æ—Å–∞."
// 	sendMessage(bot, userID, message, authContext)
// }

func getGroupAndSendSchedule(bot *telego.Bot, userID int64, requestType string, tgID int64, authContext *models.AuthContext) {
	ctx, cancel := context.WithTimeout(context.Background(), time.Second)
	defer cancel()

	// –ü–æ–ª—É—á–∞–µ–º –Ω–∞–∑–≤–∞–Ω–∏–µ –≥—Ä—É–ø–ø—ã –ø–æ tg_id
	groupName, err := clients.GetGroupByTGID(ctx, tgID)
	if err != nil {
		messages.SendMessageInlineKeyboard(bot, userID, authContext, "–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ –≥—Ä—É–ø–ø—ã. –ü–æ–∂–∞–ª—É–π—Å—Ç–∞, –ø–æ–ø—Ä–æ–±—É–π—Ç–µ —Å–Ω–æ–≤–∞.", "–í –≥–ª–∞–≤–Ω–æ–µ –º–µ–Ω—é", "main_menu")
		return
	}

	// –¢–µ–ø–µ—Ä—å –ø–æ–ª—É—á–∞–µ–º —Ä–∞—Å–ø–∏—Å–∞–Ω–∏–µ –ø–æ –Ω–∞–∑–≤–∞–Ω–∏—é –≥—Ä—É–ø–ø—ã
	message := getScheduleMessage(requestType, groupName)
	messages.SendMessageInlineKeyboard(bot, userID, authContext, message, "–í –≥–ª–∞–≤–Ω–æ–µ –º–µ–Ω—é", "main_menu")
}

func handleAddressButtonPress(bot *telego.Bot, userID int64, placeName string, authContext *models.AuthContext) {
	ctx, cancel := context.WithTimeout(context.Background(), time.Second)
	defer cancel()

	// –ü–æ–ª—É—á–∞–µ–º —Å–æ–æ–±—â–µ–Ω–∏—è –ø–æ placeName
	message, err := getMessagesByPlaceName(ctx, placeName)
	if err != nil {
		// –û–±—Ä–∞–±–æ—Ç–∫–∞ –æ—à–∏–±–∫–∏, –µ—Å–ª–∏ –Ω–µ —É–¥–∞–ª–æ—Å—å –ø–æ–ª—É—á–∏—Ç—å —Å–æ–æ–±—â–µ–Ω–∏—è
		messages.SendMessageInlineKeyboard(bot, userID, authContext, fmt.Sprintf("–û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ–± –∞–¥—Ä–µ—Å–µ 1: %s", err), "–í –≥–ª–∞–≤–Ω–æ–µ –º–µ–Ω—é", "main_menu")
		return
	}

	authContext.LastPlaceName = placeName

	messages.ClearMessages(bot, authContext, userID)

	for _, messag := range message {
		messages.SendMessageAdress(bot, userID, authContext, messag)
	}

}

func getMessagesByPlaceName(ctx context.Context, placeName string) ([]string, error) {
	// –í—ã–ø–æ–ª–Ω—è–µ–º gRPC –≤—ã–∑–æ–≤ –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ–± –∞–¥—Ä–µ—Å–µ
	places, err := clients.FindAddressByPlaceName(ctx, placeName)
	if err != nil {
		return nil, fmt.Errorf("–æ—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ–± –∞–¥—Ä–µ—Å–µ: %w", err)
	}

	// –§–æ—Ä–º–∏—Ä—É–µ–º —Å–æ–æ–±—â–µ–Ω–∏—è
	var message []string
	for _, place := range places {
		// –ü—Ä–µ–æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏–µ –≤—Ä–µ–º–µ–Ω–∏
		workTime, err := utils.FormatWorkTime(place.PlaceTimeStart, place.PlaceTimeEnd)
		if err != nil {
			workTime = "–Ω–µ–∏–∑–≤–µ—Å—Ç–Ω–æ" // –û–±—Ä–∞–±–æ—Ç–∫–∞ –æ—à–∏–±–∫–∏
		}

		// –§–æ—Ä–º–∏—Ä–æ–≤–∞–Ω–∏–µ —Ç–µ–∫—Å—Ç–∞ —Å–æ–æ–±—â–µ–Ω–∏—è
		messageText := fmt.Sprintf("–ù–∞–∑–≤–∞–Ω–∏–µ: %s\n–í—Ä–µ–º—è —Ä–∞–±–æ—Ç—ã: %s\n–¢–µ–ª–µ—Ñ–æ–Ω: %s\nEmail: %s\n–ê–¥—Ä–µ—Å: %s",
			place.PlaceName, workTime, place.PlacePhone, place.PlaceEmail, place.PlaceAdress)

		message = append(message, messageText)
	}

	return message, nil
}
